[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-markerfree"
dynamic = ["version"]
description = "Plugin to use markerfree within the Scipion framework"
authors = [
    {name = "Scipion Team", email = "scipion@cnb.csic.es"}
]
dependencies = [
    "scipion-em-tomo>=3.9.1",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["scipion", "cryoem", "cryoet", "imageprocessing", "scipion-3.0"]

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-markerfree"
Issues = "https://github.com/scipion-em/scipion-em-markerfree/issues"

[tool.setuptools.dynamic]
version = {attr = "markerfree.__version__"}

[tool.setuptools.package-data]
"markerfree" = ["protocols.conf", "icon.png", "templates/*"]

[project.entry-points."pyworkflow.plugin"]
markerfree = "markerfree"
